upgraded to the grails3

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ plugin.xml
 
 # used by Grails normally, but not by this plugin. Grails keeps creating the directory, but since we don't use or want it, ignore it.
 web-app/WEB-INF/
+/build/
+/.gradle/
+/gradle/
+gradle.properties
+grails-jcaptcha-plugin.iml
